- OS X builds on Travis CI
- Update plug-in's parameters on program change in plug-in's window
- Improve MIDI action management in Piano Roll
- Fix crash on MIDI learn for plug-in parameters
- Fix crash in MIDI input window if MIDI in params are 0
- Fix unwanted new action when dragging piano items in Piano Roll
- Fix crash while recording on existing project (GitHub #161) 


0.14.4 --- 2017 . 10 . 28
- Renameable channels
- Portable VST path
- [Sample Editor] Sample shift tool
- [Linux/Mac] Don't skip '/' path when navigating to upper folders
- Ability to process more than one plug-in instrument at once
- Beautify Configuration Window
- Bring VST window to front when opening UI
- Save 'arm' status to patch/project file
- Revamped Beats and Bpm input windows
- Simplified audio samples' storage in project folders
- Update JUCE to version 5.1.2
- UI-less plug-in window refinements
- Update UI-less plug-in window on MIDI parameter's change
- Strip .gptc/.gprj extention from patch name
- [Sample Editor] Fix non-working 'cut' operation
- Fix missed MIDI events with more than 1 plug-in in the stack
- Fix File Browser path widget drawn incorrectly in OS X
- Fix missing MIDI learn for 'Arm channel' and 'Kill channel'


0.14.3 --- 2017 . 09 . 18
- [Sample Editor] New "reverse selection" function
- [Sample Editor] New "normalize hard" function
- [Sample Editor] New "copy to channel" function
- [Sample Editor] New "copy & paste" function
- [Sample Editor] Double click on waveform selects all
- [Sample Editor] Fix garbled characters in window's title
- [Sample Editor] Fix wrong result on "set pitch to song/bar"
- Resizable channels
- Remove calls to malloc/free in Mixer (use new/delete instead)
- Improved UI management of VST plugins
- Fix infinite loop for one shot retrig samples with quantizer > 0
- Fix wrong geChannel count while saving a patch
- Fix missing greyed-out options in Sample Channel's menu when loading a wrong
  sample