@@ -1,0 +1,5 @@
+#!/usr/bin/env bash
+
+make -j 2
+make rename
+make check -j 2
