@@ -22,6 +22,7 @@
 - Fix crash in MIDI input window if MIDI in params are 0
 - Fix unwanted new action when dragging piano items in Piano Roll
 - Fix crash while recording on existing project (GitHub #161) 
+- Fix crash on startup in Windows build
 
 
 0.14.4 --- 2017 . 10 . 28
